= 2.0 / ?? (future release changes, like a reminder to self)
  
  - prsnt? and absnt? are now finally banned into oblivion. Wasting vocals for
    the win. 

= 1.7 / ???

= 1.6 / 1May2014

  + EXPERIMENTAL: Parslet accelerators permit replacing parts of your parser 
    with optimized atoms using pattern matching. Look at 
    examples/optimized_erb.rb or the introduction to the feature in 
    qed/accelerators.md.

  + infix_expression permits to declare an infix expression parser (think 
    calculator) directly. This will solve many of the problems we have 
    more elegantly. 

  + Rspec 3 syntax, though hideous, should now work. 

  - Drops 1.8.7 compatibility. 

  ! A performance anomaly when parsing multibyte characters has been detected
    and fixed with the help of Zach Moazeni (@zmoazeni).

  ! A few small bug fixes and optimisations have been introduced. API should 
    remain unchanged. 
    
= 1.5 / 27Dec2012
    
  + Handles unconsumed input at end of parse completely differently. Instead
    of generating a toplevel error, it now raises an error in every branch
    of the parse. More information in the resulting exception ensues! Thanks
    again to John Mettraux for inspiration & acceptance specs. 
    
    NOTE that this means that the UnconsumedInput exception is gone, since the
    unconsumed input case is nothing special anymore. 
    
  * This history now finally reads like the Changelog of the linux kernel. 
    Meaning that probably no one ever reads this. 
    
  + Captures and parsing subsequent input based on captured values. This has
    been long overdue - finally you can parse HEREdocs with parslet!
    
= 1.4.0 / 25May2012

  + Revised documentation. A few new API features have finally made it into
    the documentation. Examples in the documentation are now curated and
    run against the current code so that they really really work. 
    Also, the website generation tools have been replaced with 2012-style